# book-ai-backend

./: .env  .gitignore  Dockerfile  README.md  ai_engine.py  build.sh  desktop.ini  main.py  pyproject.toml  render.yaml  requirements.txt  start.sh
data/jee/Mathematics/: test1.txt  test2.txt
exams/: chemistry.json  jee_chemistry.json  jee_math.json  jee_physics.json  math.json  physics.json
src/: ai_engine.py
src/book_ai_backend/: ai_engine.py  main.py  start.sh
