[tool.poetry]
name = "book-ai-backend"
version = "0.1.0"
description = "Backend service for Book AI application"
authors = ["harshabacham <you@example.com>"]
readme = "README.md"
packages = [{include = "book_ai_backend"}]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.109.2"
uvicorn = "^0.27.0"
joblib = "^1.5.1"
numpy = "^2.3.1"
scikit-learn = "^1.7.0"
scipy = "^1.16.0"
threadpoolctl = "^3.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"