[tool.poetry]
name = "book-ai-backend"
version = "0.1.0"
description = "Backend service for Book AI application"
authors = ["harshabacham <you@example.com>"]
packages = [
    { include = "book_ai_backend", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
uvicorn = "^0.27.0"
pypdf = "^5.6.1"
scikit-learn = "^1.7.0"
numpy = "^2.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"